# OF-Scraper

./: .gitignore  LICENSE  README.md  active_bugs.md  pyproject.toml  requirements.txt
ofscraper/classes/: labels.py  placeholder.py
ofscraper/classes/of/: base.py  media.py  models.py  posts.py
ofscraper/classes/table/: app.py  compose.py
ofscraper/commands/: check.py  db.py  manual.py
ofscraper/commands/metadata/: consumer.py  manager.py  metadata.py
ofscraper/commands/scraper/: scraper.py
ofscraper/data/api/: archive.py  highlights.py  labels.py  messages.py  paid.py  pinned.py  profile.py  streams.py  subscribe.py  timeline.py
ofscraper/data/posts/: scrape_paid.py
ofscraper/db/: transition.py
ofscraper/db/operations_/: media.py  messages.py  posts.py  profile.py  wrapper.py
ofscraper/filters/media/: filters.py
ofscraper/filters/models/: date.py  price.py
ofscraper/gui/: app.py  main_window.py  signals.py  styles.py
ofscraper/gui/dialogs/: auth_dialog.py  binary_dialog.py  config_dialog.py  drm_dialog.py  merge_dialog.py  missing_deps_dialog.py  model_selector_dialog.py  profile_dialog.py
ofscraper/gui/pages/: action_page.py  area_selector_page.py  help_page.py  model_selector_page.py  table_page.py
ofscraper/gui/scripts/: drm_keydive.py
ofscraper/gui/utils/: progress_bridge.py  thread_worker.py  workflow.py
ofscraper/gui/widgets/: console_log.py  data_table.py  progress_panel.py  sidebar.py  styled_button.py
ofscraper/main/close/: exit.py
ofscraper/managers/: manager.py  model.py  postcollection.py  profile.py  stats.py
ofscraper/managers/sessionmanager/: cert.py  ofsession.py  sessionmanager.py
ofscraper/managers/utils/: state.py
ofscraper/prompts/: promptConvert.py  prompt_validators.py
ofscraper/prompts/prompt_groups/: area.py  config.py  merge.py  model.py
ofscraper/prompts/utils/: prompt_helpers.py
ofscraper/scripts/: naming_script.py  skip_download_script.py
ofscraper/utils/: checkers.py  console.py  dates.py  hash.py  settings.py  text.py
ofscraper/utils/args/: main.py
ofscraper/utils/auth/: request.py
ofscraper/utils/cache/: cache.py
ofscraper/utils/config/: config.py  data.py  file.py  schema.py
ofscraper/utils/context/: exit.py  run_async.py
(+49 files in other folders)
