[project]
name = "ofscraper"
dynamic = ["version"]
description = "automatically scrape onlyfans"
authors = [{ name = "TesticularMass" }]
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
  "aiofiles~=25.1.0",
  "aiolimiter~=1.2.1",
  "aioprocessing~=2.0.1",
  "aiosqlite~=0.22.1",
  "arrow~=1.4.0",
  "async-property~=0.2.2",
  "browser-cookie3==0.20.1",
  "beautifulsoup4~=4.14.3",
  "certifi>=2024.7.4,<2027",
  "cloup~=3.0.9",
  "diskcache~=5.6.3",
  "faust-cchardet~=2.1.19",
  "humanfriendly~=10.0",
  "httpx[http2]~=0.28.1",
  "httpx-aiohttp~=0.1.12",
  "idna>=3.10",
  "inquirerpy~=0.3.4",
  "limiter~=0.5.0",
  "lxml>=5.1.0",
  "mpegdash~=0.4.1",
  "pathvalidate~=3.3.1",
  "prompt-toolkit~=3.0.52",
  "psutil~=7.2.2",
  "pycryptodome~=3.23.0",
  "pynumparser~=1.4.1",
  "pywidevine~=1.9.0",
  "requests>=2.31,<2.34",
  "rich~=15.0.0",
  "schedule~=1.2.2",
  "setproctitle~=1.3.7",
  "speedtest-cli~=2.1.3",
  "tenacity~=9.1.4",
  "textual~=8.2.4",
  "tqdm~=4.67.3",
  "uvloop~=0.22.1; sys_platform == 'linux' or sys_platform == 'linux2'",
  "win32-setctime~=1.2.0; sys_platform == 'win32'",
  "xxhash~=3.7.0",
  "pyyaml>=6.0.2",
  "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = ["autopep8~=2.0.2", "pyinstaller"]
test = [
  "pytest~=7.3.1",
  "coverage~=7.4.3",
  "pytest-cov~=4.1.0",
  "random-unicode-emoji~=2.8",
  "random-emoji~=1.0.15",
  "pytest-mock~=3.12.0",
]
docs = ["sphinx-argparse~=0.5.2"]
ffmpeg = ["pyffmpeg>=2.5.2.3.1"]

[project.scripts]
ofscraper = "ofscraper.__main__:main"

[project.urls]
"Homepage" = "https://github.com/TesticularMass/OF-Scraper"

# --- Build System & Tool Configuration ---

# This section tells hatchling how to build the wheel.
[tool.hatch.build.targets.wheel]
packages = ["ofscraper"]

[build-system]
requires = ["hatchling", "version-pioneer"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "version-pioneer"

[tool.version-pioneer]
# This tells the plugin to create a _version.py file inside your ofscraper package.
versionscript = "plugins.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
